--- a/psm-app/cms-web/WebContent/templates/includes/html_head.template.html
+++ b/psm-app/cms-web/WebContent/templates/includes/html_head.template.html
@@ -14,6 +14,8 @@
     <script type="text/javascript">
       var ctx = "{{ctx}}";
     </script>
+  {{else if systemPage}}
+    <link rel="stylesheet" href="{{ctx}}/js/chosen/chosen.css" type="text/css" media="all"/>
   {{/if}}
   <script src="{{ctx}}/js/jquery-1.7.1.min.js" type="text/javascript"></script>
   <script src="{{ctx}}/js/jquery.tablesorter.min.js" type="text/javascript"></script>
@@ -25,6 +27,8 @@
     <script src="{{ctx}}/js/jquery.tinyscrollbar.min.js" type="text/javascript"></script>
     <script src="{{ctx}}/js/jquery.validate.min.js" type="text/javascript"></script>
     <script src="{{ctx}}/js/chosen/chosen.jquery.min.js" type="text/javascript"></script>
+  {{else if systemPage}}
+    <script src="{{ctx}}/js/chosen/chosen.jquery.min.js" type="text/javascript"></script>
   {{/if}}
   <script src="{{ctx}}/js/jquery.maskedinput.min.js" type="text/javascript"></script>
   {{#if adminPage}}
@@ -34,6 +38,8 @@
     <script src="{{ctx}}/js/jwysiwyg/controls/wysiwyg.link.js" type="text/javascript" ></script>
     <script src="{{ctx}}/js/jwysiwyg/controls/wysiwyg.table.js" type="text/javascript" ></script>
     <script src="{{ctx}}/js/admin/script.js" type="text/javascript"></script>
+  {{else if systemPage}}
+    <script src="{{ctx}}/js/system/script.js" type="text/javascript"></script>
   {{else}}
     <script src="{{ctx}}/js/jquery.compare.js" type="text/javascript"></script>
     <script src="{{ctx}}/js/script.js" type="text/javascript"></script>
