--- a/psm-app/cms-web/WebContent/templates/includes/header.template.html
+++ b/psm-app/cms-web/WebContent/templates/includes/header.template.html
@@ -4,7 +4,7 @@
       Welcome, <strong>{{principalUser.username}}</strong>
       | <a href="javascript:;">Help</a>
       | <form action="{{ctx}}/logout" method="post" class="logoutForm">
-          <input type="submit" class="logoutButton" value="Logout"/>
+          <input type="submit" id="logoutBtn" class="logoutButton" value="Logout"/>
           <input type="hidden" name="{{csrf.parameterName}}" value="{{csrf.token}}"/>
         </form>
     </div>
